AC_LBL_C_INIT takes two arguments, not three.

--- a/configure.in
+++ b/configure.in
@@ -21,7 +21,7 @@ AC_INIT(pcap.c)
 
 AC_CANONICAL_SYSTEM
 
-AC_LBL_C_INIT(V_CCOPT, V_INCLS, V_LIBS)
+AC_LBL_C_INIT(V_CCOPT, V_INCLS)
 AC_LBL_C_INLINE
 AC_C___ATTRIBUTE__
 
