--- a/config.h.in
+++ b/config.h.in
@@ -154,6 +154,9 @@
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
+/* if struct usbdevfs_ctrltransfer has bRequestType */
+#undef HAVE_USBDEVFS_CTRLTRANSFER_BREQUESTTYPE
+
 /* define if version.h is generated in the build procedure */
 #undef HAVE_VERSION_H
 
