Add opentest.c to the list of files to put into the source tarball.

--- a/Makefile.in
+++ b/Makefile.in
@@ -257,6 +257,7 @@ EXTRA_DIST = \
 	msdos/pktdrvr.c \
 	msdos/pktdrvr.h \
 	msdos/readme.dos \
+	opentest.c \
 	org.tcpdump.chmod_bpf.plist \
 	packaging/pcap.spec.in \
 	pcap-bpf.c \
