--- a/configure.in
+++ b/configure.in
@@ -819,8 +819,38 @@ if test $ac_cv_lbl_dag_api = yes; then
 fi
 
 if test $ac_cv_lbl_dag_api = yes; then
+        # Under 2.5.x only we need to add dagutil.o.
+        if test -r $dag_include_dir/dagutil.h; then
+                AC_MSG_CHECKING([dagutil.o])
+                dagutil_obj=no
+                if test -r $dag_lib_dir/dagutil.o; then
+                        # Object file is ready and waiting.
+                        dagutil_obj=$dag_lib_dir/dagutil.o
+                elif test -r $dag_lib_dir/libdag.a; then
+                        # Extract from libdag.a.
+                        ar x $dag_lib_dir/libdag.a dagutil.o 2>/dev/null
+                        if test -r ./dagutil.o; then
+                                dagutil_obj=./dagutil.o
+                        else
+                                ar x $dag_lib_dir/libdag.a libdag_la-dagutil.o 2>/dev/null
+                                if test -r ./libdag_la-dagutil.o; then
+                                   dagutil_obj=./libdag_la-dagutil.o
+                                fi
+                        fi
+                fi
+
+                if test $dagutil_obj = no; then
+                        AC_MSG_RESULT([no (checked $dag_lib_dir  $dag_lib_dir/libdag.a)])
+                        ac_cv_lbl_dag_api=no
+                else
+                        AC_MSG_RESULT([yes ($dagutil_obj)])
+                fi
+        fi
+fi
+
+if test $ac_cv_lbl_dag_api = yes; then
 	V_INCLS="$V_INCLS -I$dag_include_dir"
-	ADDLARCHIVEOBJS="$ADDLARCHIVEOBJS $dagapi_obj $dagopts_obj $dagreg_obj"
+	ADDLARCHIVEOBJS="$ADDLARCHIVEOBJS $dagapi_obj $dagopts_obj $dagreg_obj $dagutil_obj"
 	if test $V_PCAP != dag ; then
 		 SSRC="pcap-dag.c"
 	fi
