To compile libpcap on OpenSolaris (or Solaris Express Community Edition) build 125 and later to use the native BPF with both IPNET and traditional MAC (ethernet, etc) packet sniffing, the attached patches are required.
The attached patches represent what's in our internal build tree for libpcap.

--- a/Makefile.in
+++ b/Makefile.in
@@ -44,6 +44,7 @@ VPATH = @srcdir@
 # You shouldn't need to edit anything below.
 #
 
+LD = /usr/bin/ld
 CC = @CC@
 CCOPT = @V_CCOPT@
 INCLS = -I. @V_INCLS@
