--- a/pcap_compile.3pcap.in
+++ b/pcap_compile.3pcap.in
@@ -54,8 +54,8 @@ captured; it is used only when checking for IPv4 broadcast addresses in
 the filter program.  If the netmask of the network on which packets are
 being captured isn't known to the program, or if packets are being
 captured on the Linux "any" pseudo-interface that can capture on more
-than one network, a value of 0xffffffff can be supplied; tests for
-IPv4 broadcast addreses will fail to compile, but all other tests in
+than one network, a value of PCAP_NETMASK_UNKNOWN can be supplied; tests
+for IPv4 broadcast addreses will fail to compile, but all other tests in
 the filter program will be OK.
 .SH RETURN VALUE
 .B pcap_compile()
