Check for <linux/can.h> rather than <linux/can/version.h>.
Not all Linux kernels that can support SocketCAN sniffing have
<linux/can/version.h>, and we don't include it directly.  We *do*
include <linux/can.h>, so check for that.

Patch changed not to bother checking for the existence of <sys/socket.h>
- we already assume it exists on all platforms that support packet
capture, including Linux.  I also changed the Bluetooth "not supported
on this OS" message to look like the one for CANbus, giving the host OS.

Signed-off-by: Guy Harris <guy@alum.mit.edu>

--- a/configure.in
+++ b/configure.in
@@ -1276,7 +1276,7 @@ if test "x$enable_bluetooth" != "xno" ; then
 	       )
 	       ;;
 	*)
-	       AC_MSG_NOTICE(no Bluetooth sniffing support)
+	       AC_MSG_NOTICE(no Bluetooth sniffing support implemented for $host_os)
 	       ;;
 	esac
 	AC_SUBST(PCAP_SUPPORT_BT)
@@ -1291,11 +1291,13 @@ if test "x$enable_can" != "xno" ; then
 	dnl check for CAN sniffing support
 	case "$host_os" in
 	linux*)
-		AC_CHECK_HEADER(linux/can/version.h,
+		AC_CHECK_HEADER(linux/can.h,
 			[ AC_DEFINE(PCAP_SUPPORT_CAN, 1, [target host supports CAN sniffing])
 			CAN_SRC=pcap-can-linux.c
 			AC_MSG_NOTICE(CAN sniffing is supported)],
-			AC_MSG_NOTICE(CAN sniffing is not supported) )
+			AC_MSG_NOTICE(CAN sniffing is not supported),
+			[#include <sys/socket.h>]
+		   )
 		;;
 	*)
 		AC_MSG_NOTICE(no CAN sniffing support implemented for $host_os)
