Add limited support for reading pcap-ng files.
All sections of the file must have the same byte order, so that the
result of pcap_is_swapped() is the same throughout the file; all
interfaces in the file must have the same link-layer type and snapshot
length, so that pcap_datalink() and pcap_snapshot() can return a single
value for the entire file; and all interfaces must have the same time
resolution and offset.

--- a/Makefile.in
+++ b/Makefile.in
@@ -83,8 +83,9 @@ YACC = @V_YACC@
 PSRC =	pcap-@V_PCAP@.c @USB_SRC@ @BT_SRC@ @CAN_SRC@
 FSRC =  fad-@V_FINDALLDEVS@.c
 SSRC =  @SSRC@
-CSRC =	pcap.c inet.c gencode.c optimize.c nametoaddr.c \
-	etherent.c savefile.c bpf_filter.c bpf_image.c bpf_dump.c
+CSRC =	pcap.c inet.c gencode.c optimize.c nametoaddr.c etherent.c \
+	savefile.c sf-pcap.c sf-pcap-ng.c pcap-common.c bpf_filter.c \
+	bpf_image.c bpf_dump.c
 GENSRC = scanner.c grammar.c version.c
 LIBOBJS = @LIBOBJS@
 
@@ -117,6 +118,8 @@ HDR = $(PUBHDR) \
 	pcap-int.h \
 	pcap-stdinc.h \
 	ppp.h \
+	sf-pcap.h \
+	sf-pcap-ng.h \
 	sunatmpos.h
 
 GENHDR = \
