Pass LDFLAGS to the command that builds shr.o on AIX.
Reviewed-By: Guy Harris <guy@alum.mit.edu>

--- a/Makefile.in
+++ b/Makefile.in
@@ -400,7 +400,7 @@ libpcap.sl: $(OBJ)
 #
 libpcap.shareda: $(OBJ)
 	@rm -f $@ shr.o
-	$(CC) @V_SHLIB_OPT@ -o shr.o $(OBJ) $(ADDLOBJS) $(LIBS)
+	$(CC) @V_SHLIB_OPT@ -o shr.o $(OBJ) $(ADDLOBJS) $(LDFLAGS) $(LIBS)
 	ar rc $@ shr.o
 
 #
