--- a/configure.in
+++ b/configure.in
@@ -1170,7 +1170,7 @@ darwin*)
 	DYEXT="dylib"
 	V_CCOPT="$V_CCOPT -fno-common"
 	AC_ARG_ENABLE(universal,
-	AC_HELP_STRING([--disable-universal],[don't build universal]))
+	AC_HELP_STRING([--disable-universal],[don't build universal on OS X]))
 	if test "$enable_universal" != "no"; then
 		case "$host_os" in
 
