--- a/configure.in
+++ b/configure.in
@@ -1174,7 +1174,7 @@ darwin*)
 	if test "$enable_universal" != "no"; then
 		case "$host_os" in
 
-		darwin10.3*)
+		darwin10.*)
 			#
 			# Snow Leopard.  Build for x86-64, x86, and
 			# PPC, with x86-64 first.  (That's what Apple
